ajustes git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
 *.class
-build/*
-dist/*
-nbproject/*
+*.jar
+*.war
+*.ear
