--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,15 @@ dist.jlink.output=${dist.jlink.dir}/TshirtPOO
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.22.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.22.jar
+file.reference.mysql-connector-java-8.0.22.jar-1=C:\\Users\\Osmar Guerra\\Downloads\\mysqlconector\\mysql-connector-java-8.0.22.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.22.jar}
+    ${file.reference.mysql-connector-java-8.0.22.jar}:\
+    ${file.reference.mysql-connector-java-8.0.22.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -100,7 +102,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_15
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
