--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,10 +3,11 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.mysql-connector-java-8.0.22.jar=C:\\Users\\Jose\\Documents\\mysql-connector-java-8.0.22.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
 
 user.properties.file=C:\\Users\\Osmar Guerra\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
 
-user.properties.file=C:\\Users\\ING-JUANMATA\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+user.properties.file=C:\\Users\\Jose\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
