--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,7 +3,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.mysql-connector-java-8.0.22.jar=C:\\Users\\Jose\\Documents\\mysql-connector-java-8.0.22.jar
+file.reference.mysql-connector-java-8.0.22.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\TSHIRT-POO-U4\\mysql-connector-java-8.0.22.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
