Validado que seleccione elementos del diseño

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,11 +3,12 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.mysql-connector-java-8.0.22.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\TSHIRT-POO-U4\\mysql-connector-java-8.0.22.jar
+file.reference.jcalendar-1.4.jar=/home/codeboy1028/Documents/Java/jCalendar/lib/jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.22.jar=/home/codeboy1028/Documents/Java/mysql-connector-java-8.0.22.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
 
 user.properties.file=C:\\Users\\Osmar Guerra\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
 
-user.properties.file=C:\\Users\\Jose\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+user.properties.file=/home/codeboy1028/snap/netbeans/common/data/12.2/build.properties
