--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=/home/codeboy1028/Documents/Java/jCalendar/lib/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.22.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.22.jar
 file.reference.mysql-connector-java-8.0.22.jar-1=/home/codeboy1028/Documents/Java/mysql-connector-java-8.0.22.jar
 includes=**
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.22.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-8.0.22.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -106,7 +108,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_15
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
