Panel de diseño editado

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.jcalendar-1.4.jar-1=/home/codeboy1028/Documents/Java/jCalendar/li
 file.reference.jcalendar-1.4.jar-2=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.22.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.22.jar
 file.reference.mysql-connector-java-8.0.22.jar-1=/home/codeboy1028/Documents/Java/mysql-connector-java-8.0.22.jar
+file.reference.RSScaleLabel.jar=..\\..\\Librerias\\RSScaleLabel.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -51,7 +52,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-8.0.22.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-2}
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.RSScaleLabel.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
