--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,12 +3,15 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.jcalendar-1.4.jar=/home/codeboy1028/Documents/Java/jCalendar/lib/jcalendar-1.4.jar
-file.reference.mysql-connector-java-8.0.22.jar=/home/codeboy1028/Documents/Java/mysql-connector-java-8.0.22.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Jose\\Documents\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Jose\\Documents\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\Jose\\Documents\\lib\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.22.jar=C:\\Users\\Jose\\Documents\\mysql-connector-java-8.0.22.jar
+file.reference.mysql-connector-java-8.0.22.jar-1=C:\\Users\\Jose\\Documents\\mysql-connector-java-8.0.22.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
 
 user.properties.file=C:\\Users\\Osmar Guerra\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
 
-user.properties.file=/home/codeboy1028/snap/netbeans/common/data/12.2/build.properties
+user.properties.file=C:\\Users\\Jose\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
