Fin de lectura y escritura

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TshirtPOO
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=E:\\SOFTWARE\\NetBeans-12.1\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.jcalendar-1.4.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=/home/codeboy1028/Documents/Java/jCalendar/lib/jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-3=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.22.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.22.jar
 file.reference.mysql-connector-java-8.0.22.jar-1=/home/codeboy1028/Documents/Java/mysql-connector-java-8.0.22.jar
+file.reference.RSScaleLabel.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\Librerias\\RSScaleLabel.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -51,7 +54,10 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-8.0.22.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-2}
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.RSScaleLabel.jar}:\
+    ${file.reference.jcalendar-1.4.jar-3}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
