--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,11 +2,11 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.jcalendar-1.4.jar=C:\\Users\\Jose\\Documents\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\Jose\\Documents\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-2=C:\\Users\\Jose\\Documents\\lib\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-8.0.22.jar=C:\\Users\\Jose\\Documents\\mysql-connector-java-8.0.22.jar
-file.reference.mysql-connector-java-8.0.22.jar-1=C:\\Users\\Jose\\Documents\\mysql-connector-java-8.0.22.jar
+file.reference.jcalendar-1.4.jar=E:\\SEMESTRE_4
+file.reference.jcalendar-1.4.jar-1=E:\\SEMESTRE_4
+file.reference.jcalendar-1.4.jar-2=E:\\SEMESTRE_4
+file.reference.mysql-connector-java-8.0.22.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.22.jar
+file.reference.mysql-connector-java-8.0.22.jar-1=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.22.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
