Funciones restantes de persitencia

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -13,5 +13,5 @@ jlink.strip=false
 
 user.properties.file=C:\\Users\\Osmar Guerra\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
 
-user.properties.file=C:\\Users\\Jose\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+user.properties.file=C:\\Users\\ING-JUANMATA\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
 
