--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,9 +41,11 @@ file.reference.jcalendar-1.4.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jca
 file.reference.jcalendar-1.4.jar-1=/home/codeboy1028/Documents/Java/jCalendar/lib/jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-3=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-4=/home/codeboy1028/Documents/Java/jCalendar/lib/jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.22.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.22.jar
 file.reference.mysql-connector-java-8.0.22.jar-1=/home/codeboy1028/Documents/Java/mysql-connector-java-8.0.22.jar
 file.reference.RSScaleLabel.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\Librerias\\RSScaleLabel.jar
+file.reference.RSScaleLabel.jar-1=/home/codeboy1028/Documents/Java/RojeruSan Librer\u00a1as/RSScaleLabel.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -57,7 +59,9 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.RSScaleLabel.jar}:\
     ${file.reference.jcalendar-1.4.jar-3}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.RSScaleLabel.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-4}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -114,7 +118,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_15
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
