--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -15,5 +15,5 @@ jlink.strip=false
 
 user.properties.file=C:\\Users\\Osmar Guerra\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
 
-user.properties.file=C:\\Users\\ING-JUANMATA\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+user.properties.file=/home/codeboy1028/snap/netbeans/common/data/12.2/build.properties
 
