DESIGN VENTANA PAGO

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,14 +6,16 @@ file.reference.jcalendar-1.4.jar=E:\\SEMESTRE_4
 file.reference.jcalendar-1.4.jar-1=E:\\SEMESTRE_4
 file.reference.jcalendar-1.4.jar-2=E:\\SEMESTRE_4
 file.reference.jcalendar-1.4.jar-4=E:\\SEMESTRE_4
+file.reference.jcalendar-1.4.jar-5=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.22.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.22.jar
 file.reference.mysql-connector-java-8.0.22.jar-1=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.22.jar
 file.reference.RSScaleLabel.jar-1=E:\\SEMESTRE_4
+file.reference.RSScaleLabel.jar-2=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\Librerias\\RSScaleLabel.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
 
 user.properties.file=C:\\Users\\Osmar Guerra\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
 
-user.properties.file=/home/codeboy1028/snap/netbeans/common/data/12.2/build.properties
+user.properties.file=C:\\Users\\ING-JUANMATA\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
 
