--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ dist.jlink.output=${dist.jlink.dir}/TshirtPOO
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=E:\\SOFTWARE\\NetBeans-12.1\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
+file.reference.Atxy2k.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\TuTutorial - Libreria Atxy2k\\Atxy2k.jar
 file.reference.jcalendar-1.4.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=/home/codeboy1028/Documents/Java/jCalendar/lib/jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
@@ -65,7 +66,8 @@ javac.classpath=\
     ${file.reference.RSScaleLabel.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-4}:\
     ${file.reference.jcalendar-1.4.jar-5}:\
-    ${file.reference.RSScaleLabel.jar-2}
+    ${file.reference.RSScaleLabel.jar-2}:\
+    ${file.reference.Atxy2k.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -122,7 +124,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_15
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
