--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,8 +37,7 @@ dist.jlink.output=${dist.jlink.dir}/TshirtPOO
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=E:\\SOFTWARE\\NetBeans-12.1\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
-file.reference.Atxy2k.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\TuTutorial - Libreria Atxy2k\\Atxy2k.jar
-file.reference.Atxy2k.jar-1=/home/codeboy1028/Documents/Java/Atxy2k.jar
+file.reference.Atxy2k.jar=..\\..\\TuTutorial - Libreria Atxy2k\\Atxy2k.jar
 file.reference.jcalendar-1.4.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=/home/codeboy1028/Documents/Java/jCalendar/lib/jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
@@ -46,12 +45,14 @@ file.reference.jcalendar-1.4.jar-3=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\j
 file.reference.jcalendar-1.4.jar-4=/home/codeboy1028/Documents/Java/jCalendar/lib/jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-5=/home/codeboy1028/Documents/Java/jCalendar/lib/jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-6=/home/codeboy1028/Documents/Java/jCalendar/lib/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-7=..\\..\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.22.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.22.jar
 file.reference.mysql-connector-java-8.0.22.jar-1=/home/codeboy1028/Documents/Java/mysql-connector-java-8.0.22.jar
 file.reference.RSScaleLabel.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\Librerias\\RSScaleLabel.jar
 file.reference.RSScaleLabel.jar-1=/home/codeboy1028/Documents/Java/RojeruSan Librer\u00a1as/RSScaleLabel.jar
 file.reference.RSScaleLabel.jar-2=/home/codeboy1028/Documents/Java/RojeruSan Librer\u00a1as/RSScaleLabel.jar
 file.reference.RSScaleLabel.jar-3=/home/codeboy1028/Documents/Java/RojeruSan Librer\u00a1as/RSScaleLabel.jar
+file.reference.RSScaleLabel.jar-4=..\\..\\Librerias\\RSScaleLabel.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -70,10 +71,11 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-4}:\
     ${file.reference.jcalendar-1.4.jar-5}:\
     ${file.reference.RSScaleLabel.jar-2}:\
-    ${file.reference.Atxy2k.jar}:\
     ${file.reference.RSScaleLabel.jar-3}:\
     ${file.reference.jcalendar-1.4.jar-6}:\
-    ${file.reference.Atxy2k.jar-1}
+    ${file.reference.RSScaleLabel.jar-4}:\
+    ${file.reference.jcalendar-1.4.jar-7}:\
+    ${file.reference.Atxy2k.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
