Validaciones extras agregadas

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=E:\\SOFTWARE\\NetBeans-12.1\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.Atxy2k.jar=..\\..\\TuTutorial - Libreria Atxy2k\\Atxy2k.jar
+file.reference.Atxy2k.jar-1=/home/codeboy1028/Documents/Java/Atxy2k.jar
 file.reference.jcalendar-1.4.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=/home/codeboy1028/Documents/Java/jCalendar/lib/jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
@@ -48,6 +49,7 @@ file.reference.jcalendar-1.4.jar-6=/home/codeboy1028/Documents/Java/jCalendar/li
 file.reference.jcalendar-1.4.jar-7=..\\..\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.22.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.22.jar
 file.reference.mysql-connector-java-8.0.22.jar-1=/home/codeboy1028/Documents/Java/mysql-connector-java-8.0.22.jar
+file.reference.mysql-connector-java-8.0.22.jar-2=/home/codeboy1028/Documents/Java/mysql-connector-java-8.0.22.jar
 file.reference.RSScaleLabel.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\Librerias\\RSScaleLabel.jar
 file.reference.RSScaleLabel.jar-1=/home/codeboy1028/Documents/Java/RojeruSan Librer\u00a1as/RSScaleLabel.jar
 file.reference.RSScaleLabel.jar-2=/home/codeboy1028/Documents/Java/RojeruSan Librer\u00a1as/RSScaleLabel.jar
@@ -75,7 +77,9 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-6}:\
     ${file.reference.RSScaleLabel.jar-4}:\
     ${file.reference.jcalendar-1.4.jar-7}:\
-    ${file.reference.Atxy2k.jar}
+    ${file.reference.Atxy2k.jar}:\
+    ${file.reference.Atxy2k.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.22.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
