--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.Atxy2k.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\TuTutorial - Libreria Atxy2k\\Atxy2k.jar
 file.reference.Atxy2k.jar-1=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\TuTutorial - Libreria Atxy2k\\Atxy2k.jar
 file.reference.jcalendar-1.4.jar=E:\\SEMESTRE_4
 file.reference.jcalendar-1.4.jar-1=E:\\SEMESTRE_4
@@ -18,5 +19,5 @@ jlink.strip=false
 
 user.properties.file=C:\\Users\\Osmar Guerra\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
 
-user.properties.file=/home/codeboy1028/snap/netbeans/common/data/12.2/build.properties
+user.properties.file=C:\\Users\\ING-JUANMATA\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
 
