--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ excludes=
 file.reference.AbsoluteLayout.jar=E:\\SOFTWARE\\NetBeans-12.1\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.Atxy2k.jar=..\\..\\TuTutorial - Libreria Atxy2k\\Atxy2k.jar
 file.reference.Atxy2k.jar-1=/home/codeboy1028/Documents/Java/Atxy2k.jar
+file.reference.Atxy2k.jar-2=/home/codeboy1028/Documents/Java/Atxy2k.jar
 file.reference.jcalendar-1.4.jar=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=/home/codeboy1028/Documents/Java/jCalendar/lib/jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=E:\\SEMESTRE_4\\CLASES\\POO\\U4\\LIBRERIAS\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
@@ -79,7 +80,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-7}:\
     ${file.reference.Atxy2k.jar}:\
     ${file.reference.Atxy2k.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.22.jar-2}
+    ${file.reference.mysql-connector-java-8.0.22.jar-2}:\
+    ${file.reference.Atxy2k.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -136,7 +138,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_15
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
